[package]
name = "teqxt"
version = "0.1.0"
authors = ["Andrew Farkas"]
edition = "2024"

[dependencies]
itertools = "0.14.0"
log = "0.4.27"

# GUI dependencies (versions must match)
eframe = "0.31.1"
egui = "0.31.1"
egui-wgpu = "0.31.1"
wgpu = "24.0.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
