[package]
name = "teqxt"
version = "0.1.0"
authors = ["Andrew Farkas"]
edition = "2024"

[dependencies]
bytemuck = "1.22.0"
itertools = "0.14.0"
log = "0.4.27"
parking_lot = "0.12.3"
parley = { version = "0.3.0", default-features = false, features = ["std"] }
swash = { version = "*", default-features = false, features = ["scale"] }

# GUI dependencies (versions must match)
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts",
    "wayland",
    "wgpu",
    "x11",
] }
egui = "0.31.1"
egui-wgpu = "0.31.1"
wgpu = { version = "24.0.0", features = ["webgpu", "webgl"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = "s"
